# graph_calculator

./: .gitignore  README.md
headers/: Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  Exception.cpp  Exception.h  Graph.cpp  Graph.h  GraphCalculator.CPP  GraphCalculator.h  GraphFactory.cpp  GraphFactory.h  berko  graph.i  graphCalculatorParser.cpp  graphCalculatorParser.h  li+1  lio+ber  lior  liov  love  main.cpp  makefile  pragh.i  test.c  test.cpp  test_in.txt  zin.txt
